# cleanroom-agent

./: .gitignore  Cargo.toml  deny.toml
.cargo/: config.toml
crates/cleanroom-agent/: Cargo.toml
crates/cleanroom-agent/src/: absorb_human_changes.rs  agent.rs  code_merger.rs  compat_detector.rs  completeness.rs  consistency.rs  consumer.rs  degradation.rs  dependency_graph.rs  design_decisions.rs  evaluation.rs  incremental_analysis.rs  interaction.rs  ir_to_sdef.rs  lib.rs  lsp_analysis.rs  migration_gen.rs  module_partitioner.rs  name_resolution.rs  naming.rs  orchestrator.rs  producer.rs  producer_pipeline.rs  progress_visualizer.rs  recovery.rs  repo_scanner.rs  retry.rs  reviewer.rs  scheduler.rs  test_extractor.rs  workflow_signal.rs
crates/cleanroom-agent/tests/: consistency_test.rs  roundtrip_test.rs
crates/cleanroom-cli/: Cargo.toml
crates/cleanroom-cli/src/: main.rs  mcp_client.rs  progress.rs
crates/cleanroom-cli/src/commands/: mod.rs
crates/cleanroom-db/: Cargo.toml
crates/cleanroom-db/src/: database.rs  embedded_schema.rs  lib.rs
crates/cleanroom-i18n/: Cargo.toml
crates/cleanroom-i18n/locales/: en.json  zh-CN.json
crates/cleanroom-i18n/src/: lib.rs
crates/cleanroom-lsp/: Cargo.toml
crates/cleanroom-mcp/: Cargo.toml
crates/cleanroom-prompt/: Cargo.toml
crates/cleanroom-prompt/src/: context_budget.rs  few_shot.rs  lib.rs  response_parser.rs  system_prompt.rs  tool_orchestration.rs
crates/sdef-core/: Cargo.toml
crates/sdef-core/src/: lib.rs  (+1 more)
migrations/: 001_initial_schema.sql  002_sdef_storage.sql  003_unique_constraints.sql  004_fts_extended.sql  005_agent_collaboration.sql  006_evaluation.sql
tests/: mcp_redis_test.rs  roundtrip_test.rs
(+58 files in other folders)
