[package]
name = "cleanroom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cleanroom-agent = { path = "../cleanroom-agent" }
cleanroom-mcp = { path = "../cleanroom-mcp" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
