[package]
name = "cleanroom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cleanroom-agent = { path = "../cleanroom-agent" }
cleanroom-db = { path = "../cleanroom-db" }
cleanroom-mcp = { path = "../cleanroom-mcp" }
cleanroom-i18n = { path = "../cleanroom-i18n" }
sdef-core = { path = "../sdef-core" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
indicatif.workspace = true
serde = { workspace = true }
