[package]
name = "cleanroom-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prompt engineering and LLM interaction layer for Cleanroom Agent"

[dependencies]
cleanroom-db = { path = "../cleanroom-db" }
sdef-core = { path = "../sdef-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
regex-lite = "0.1"

[dev-dependencies]
tempfile.workspace = true
